--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="device-width, initial-scale=1.0" />
-  <title>My home work 04</title>
+  <title>My home work 05</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -137,12 +137,15 @@
         <ul class="work list">
           <li class="work-img">
             <img src="./img/box1.jpg" alt="пишем код" width="370" />
+            <p class="work-img-text">Десктопные приложения</p>
           </li>
           <li class="work-img">
             <img src="./img/box2.jpg" alt="тестируем" width="370" />
+              <p class="work-img-text">Мобильные приложения</p>
           </li>
           <li class="work-img">
             <img src="./img/box3.jpg" alt="выбор цвета" width="370" />
+            <p class="work-img-text">Дизайнерские решения</p>
           </li>
         </ul>
       </div>
