--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <ul class="header-nav list">
           <li class="items">
-            <a href="./index.html" class="header-link link">Студия</a>
+            <a href="./index.html" class="header-link link current">Студия</a>
           </li>
           <li class="items">
             <a href="./portfolio.html" class="header-link link">Портфолио</a>
