--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-  
-    <link rel="stylesheet" href="./css/styles.css" />
+
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo list">
           <span class="logo">Web</span>Studio</a>
-  
+
         <ul class="header-nav list">
           <li class="items">
             <a href="./index.html" class="header-link link current">Студия</a>
@@ -34,26 +34,26 @@
           </li>
         </ul>
       </nav>
-  
+
       <ul class="auth-nav list">
         <li class="contact-items">
-  
+
           <a href="mailto:info@devstudio.com" class="header-address link">
             <svg class="nav-icon" width="16" height="12">
               <use href="./img/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-  
+
         </li>
         <li class="contact-items">
-  
+
           <a href="" class="header-address link">
             <svg class="nav-icon" width="10" height="16">
               <use href="./img/icons.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a>
-  
+
         </li>
       </ul>
     </div>
@@ -92,7 +92,11 @@
         <h1 class="visually-hidden">Наши работы</h1>
         <ul class="project list">
           <li class="project-section">
+            <div class="project-top-wrapper">
             <img src="./img/project1.jpg" alt="изображение 3 карточек" width="370" height="294" />
+            <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+            шпионажа и атак на защищённые сервера конкурентов</p>
+            </div>
             <div class="project-jpg">
               <h2 class="project-title">Технокряк</h2>
               <p class="project-item">Веб-сайт</p>
@@ -191,7 +195,7 @@
           </ul>
         </div>
       </div>
-  
+
       <div class="footer-box">
         <p class="footer-text">Присоединяйтесь</p>
         <ul class="footer-command-box">
@@ -202,21 +206,21 @@
               </svg>
             </a>
           </li>
-  
+
           <li class="footer-command-iconbox">
             <a href="" class="footer-command-link">
               <svg class="footer-command-icon">
                 <use href="./img/icons.svg#icon-twitter1"></use>
               </svg> </a>
           </li>
-  
+
           <li class="footer-command-iconbox">
             <a href="" class="footer-command-link">
               <svg class="footer-command-icon">
                 <use href="./img/icons.svg#icon-facebook1"></use>
               </svg> </a>
           </li>
-  
+
           <li class="footer-command-iconbox">
             <a href="" class="footer-command-link">
               <svg class="footer-command-icon">
@@ -224,7 +228,7 @@
               </svg> </a>
           </li>
         </ul>
-  
+
       </div>
     </div>
   </footer>
