делает оверфлоу на все карточки с выездом снизу

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,80 +92,147 @@
         <h1 class="visually-hidden">Наши работы</h1>
         <ul class="project list">
           <li class="project-section">
-            <div class="project-top-wrapper">
-            <img src="./img/project1.jpg" alt="изображение 3 карточек" width="370" height="294" />
-            <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-            шпионажа и атак на защищённые сервера конкурентов</p>
-            </div>
-            <div class="project-jpg">
-              <h2 class="project-title">Технокряк</h2>
-              <p class="project-item">Веб-сайт</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project1.jpg" alt="изображение 3 карточек" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-item">Веб-сайт</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project2.jpg" alt="изображение 2х баскетболистов" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-              <p class="project-item">Дизайн</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project2.jpg" alt="изображение 2х баскетболистов" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p class="project-item">Дизайн</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project3.jpg" alt="изображение лого ресторана" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Ресторан Seafood</h2>
-              <p class="project-item">Приложение</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project3.jpg" alt="изображение лого ресторана" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p class="project-item">Приложение</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project4.jpg" alt="изображение наушников" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Проект Prime</h2>
-              <p class="project-item">Маркетинг</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project4.jpg" alt="изображение наушников" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Проект Prime</h2>
+                <p class="project-item">Маркетинг</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project5.jpg" alt="изображение 2 коробок" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Проект Boxes</h2>
-              <p class="project-item">Приложение</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project5.jpg" alt="изображение 2 коробок" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Проект Boxes</h2>
+                <p class="project-item">Приложение</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project6.jpg" alt="изображение сайта и карты" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Inspiration has no Borders</h2>
-              <p class="project-item">Веб-сайт</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project6.jpg" alt="изображение сайта и карты" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Inspiration has no Borders</h2>
+                <p class="project-item">Веб-сайт</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project7.jpg" alt="изображение журнала" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Издание Limited Edition</h2>
-              <p class="project-item">Дизайн</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project7.jpg" alt="изображение журнала" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Издание Limited Edition</h2>
+                <p class="project-item">Дизайн</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project8.jpg" alt="изображение лейбы" width="370" height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Проект LAB</h2>
-              <p class="project-item">Маркетинг</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project8.jpg" alt="изображение лейбы" width="370" height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Проект LAB</h2>
+                <p class="project-item">Маркетинг</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-section">
-            <img src="./img/project9.jpg" alt="изображение работающего человека за ноутбуком" width="370"
-              height="294" />
-            <div class="project-jpg">
-              <h2 class="project-title">Growing Business</h2>
-              <p class="project-item">Приложение</p>
-            </div>
+            <a href="" class="project-box">
+              <div class="project-top-wrapper">
+                <img src="./img/project9.jpg" alt="изображение работающего человека за ноутбуком" width="370"
+                  height="294" />
+                <p class="project-text">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
+              <div class="project-jpg">
+                <h2 class="project-title">Growing Business</h2>
+                <p class="project-item">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
