--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
 
         <ul class="header-nav list">
           <li class="items">
-            <a href="./index.html" class="header-link link current">Студия</a>
+            <a href="./index.html" class="header-link linkt">Студия</a>
           </li>
           <li class="items">
-            <a href="./portfolio.html" class="header-link link">Портфолио</a>
+            <a href="./portfolio.html" class="header-link link current">Портфолио</a>
           </li>
           <li class="items">
             <a href="" class="header-link link">Контакты</a>
